# python_file_server

./: .gitignore  db.sqlite3  main.py  pyproject.toml
file_transfer/: settings.py  urls.py
parallel/: multi-threading.py  multi_processing.py  parallel.py  sequential.py
sftp/: main.py
storage/: urls.py  views.py
